0025694: Change STEP exporter to use AP214 IS by default

Test-case for issue #25694